# SunnyvaleConnect

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.test  ENTREGAS.md  Makefile  README.md  docker-compose-debug.override.yml  docker-compose.yml  requirements.txt  schema.yml
myapp/: README.md  conftest.py  manage.py  pyproject.toml  requirements.txt
myapp/admin_dashboard/: serializers.py  urls.py  views.py
myapp/admin_dashboard/services/: admin_dashboard_service.py
myapp/bbq_reservations/: admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
myapp/bbq_reservations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_bbqreservationmodel_household_and_more.py  0005_bbqreservationmodel_end_time_and_more.py  0006_bbqreservationmodel_status.py
myapp/bbq_reservations/repositories/: bbq_repository.py
myapp/bbq_reservations/services/: bbq_service.py
myapp/bbq_reservations/tests/: test_bbq_reservations.py
myapp/condo_payments/: admin.py  apps.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
myapp/condo_payments/migrations/: 0001_initial.py  0002_initial.py  0006_rename_desciption_condopaymentmodel_description.py  0007_condopaymentmodel_amount_condopaymentmodel_due_date_and_more.py
myapp/condo_payments/repositories/: condo_payment_repository.py
myapp/condo_payments/services/: condo_payment_service.py
myapp/condo_payments/tests/: test_condo_payments.py
myapp/condominiums/: admin.py  apps.py  models.py  modules.py  serializers.py  urls.py  views.py
myapp/condominiums/migrations/: 0001_initial.py  0002_enabled_modules.py
myapp/condominiums/repositories/: condominium_repository.py
myapp/condominiums/services/: condominium_service.py
myapp/delivery_notification/: apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
myapp/delivery_notification/migrations/: 0001_initial.py  0002_initial.py  0003_household_instead_of_user.py  0004_deliverynotificationmodel_notified_holder.py  0005_brazilian_delivery_platforms.py
myapp/employee_dashboard/: serializers.py  urls.py  views.py
myapp/hall_reservations/: admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
myapp/households/: admin.py  models.py  serializers.py  urls.py  views.py
myapp/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
myapp/reservations/: admin.py  models.py  serializers.py  urls.py  views.py
myapp/service_requests/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
myapp/shared/: availability.py  container.py  exception_handler.py  exceptions.py  permissions.py  roles.py  tenant.py  time_slots.py
myapp/sunnyValeConnect/: asgi.py  settings.py  urls.py  wsgi.py
myapp/sunny_vale_news/: admin.py  apps.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
myapp/tests_base/: base_tests_user.py
myapp/units/: admin.py  models.py  serializers.py  unit_catalog.py  urls.py  views.py
myapp/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
myapp/visitor_access/: admin.py  apps.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
(+345 files in other folders)
