[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
PyJWT = "2.9.0"
setuptools = "74.0.0"
sqlparse = "0.5.1"
wheel = "0.44.0"
psycopg2-binary = "2.9.10"
django = "^5.1.3"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.4.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
coverage = "7.6.4"
faker = "^30.8.2"
model-bakery = "^1.20.0"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------------- pytest --------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sunnyValeConnect.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--reuse-db",
    "--tb=short",
]
markers = [
    "unit: pure unit tests (no DB / no HTTP)",
    "api: DRF API tests",
    "slow: long-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# -------------------------- coverage --------------------------
[tool.coverage.run]
branch = true
source = [
    "bbq_reservations",
    "hall_reservations",
    "visitor_access",
    "service_requests",
    "condo_payments",
    "delivery_notification",
    "sunny_vale_news",
    "users",
    "households",
    "sunnyValeConnect",
]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests_base/*",
    "*/__pycache__/*",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
    "*/admin.py",
    "*/apps.py",
    "conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
